syntax = "proto3";

service Schedule {
    rpc GetScheduleByDate(Date) returns (ScheduleData) {}
    rpc GetAllScheduleDays(Empty) returns (Planning) {}
    rpc AddScheduleDay(ScheduleData) returns (ScheduleData) {}
    rpc DeleteScheduleDay(Date) returns (ScheduleData) {}
}

message Date {
    string date = 1;
}

message Planning {
    repeated ScheduleData planning = 1;
}

message ScheduleData {
    string date = 1;
    repeated string movies = 2;
}

message Empty {}